# inissai

./: package-lock.json  package.json  pyproject.toml
app/: database.py  main.py
app/model/: posts.py  users.py
app/routes/: __init__.py  posts.py  users.py
app/schema/: Post.py  User.py
app/services/: post_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  main.jsx
frontend/src/components/: NavBar.jsx
frontend/src/pages/: sign-in.jsx
