[project]
name = "inissai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
